--- a/src/components/ss.css
+++ b/src/components/ss.css
@@ -7,3 +7,11 @@
     width: 100%;
 
 }
+
+.lie{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f0f1f5;
+    background-image: url("https://www.transparenttextures.com/patterns/concrete-wall.png");
+}
